restoring working vertion

--- a/MemoriaDeTrabajo/index.html
+++ b/MemoriaDeTrabajo/index.html
@@ -93,6 +93,7 @@
         border: solid 1px #bbb;
         width:100%;
         position: relative;
+        width: 100%;
         height: 0;
         padding-bottom: 100%;
       }
@@ -168,7 +169,7 @@
                 </div>
               </div>
             </div>
-              <a href="http://gaviles.github.io/Fonoaudiologia" target="_blank">Proyecto de Código Libre, Bajo la Lisencia MIT </a>
+
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-default" onclick="downloadData()" >Descarga Resultados</button>
