--- a/MemoriaDeTrabajo/index.html
+++ b/MemoriaDeTrabajo/index.html
@@ -140,6 +140,7 @@
                 <div class="input-group">
                   <span class="input-group-addon" id="basic-addon1">Paciente</span>
                   <select id="selected-patient">
+                      <option value="null" > Seleccione un Paciente </option>
                   </select>
                 </div>
               </div>
@@ -169,7 +170,7 @@
                 </div>
               </div>
             </div>
-
+            <a href="//gaviles.github.io/Fonoaudiologia" target="_blank" >Sitio web del proyecto.</a>
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-default" onclick="downloadData()" >Descarga Resultados</button>
