Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 <p>El puntaje asignado al test corresponde a la suma del largo de las secuencias que fueron correctamente repetidas (Máximo 40 puntos)</p>
 
 <h2>
-<a id="lisencia" class="anchor" href="#lisencia" aria-hidden="true"><span class="octicon octicon-link"></span></a>Lisencia</h2>
+<a id="licencia" class="anchor" href="#licencia" aria-hidden="true"><span class="octicon octicon-link"></span></a>Licencia</h2>
 
 <p>Copyright (c) 2015 Gustavo Avilés</p>
 
